# terragrunt-gcp-tool-mcp

./: .commitlintrc.json  .coverage  .dockerignore  .releaserc.json  AUTODEVOPS_SYSTEM_PROMPT.md  CHANGELOG.md  Dockerfile  EXECUTIVE_SUMMARY.md  EXPERIMENTAL_FEATURES.md  MIGRATION_GUIDE.md  Makefile  QUICK_START.md  README.md  SEMANTIC_VERSIONING.md  autodevops_system_prompt.json  claude_desktop_config.json  coverage.xml  package-lock.json  package.json  pyproject.toml  requirements-updated.txt  requirements.txt  run_server.py  setup.py  test_startup.py
.github/workflows/: dependency-update.yml  manual-release.yml  pr-validation.yml  semantic-release.yml
config/: config.example.yaml  config.yaml
scripts/: update_version.py
src/terragrunt_gcp_mcp/: __init__.py  autodevops_prompt.py  cli.py  config.py  cost_manager.py  models.py  server.py  stack_manager.py  terragrunt_manager.py  utils.py
src/terragrunt_gcp_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_config.py  test_models.py  test_server.py  test_utils.py
